--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "angular-scrollto",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/scottcorgan/angular-scrollto",
   "authors": [
     "Scott Corgan <scottcorgan@gmail.com>"
   ],
   "description": "Angular directive to scroll to element by selector",
-  "main": "angular-scrollto.min.js",
+  "main": "angular-scrollto.js",
   "keywords": [
     "angular",
     "scroll",
