--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-scrollto",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Angular directive to scroll to element by selector",
-  "main": "angular-scrollto.min.js",
+  "main": "angular-scrollto.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
