--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "angular-scrollto",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "homepage": "https://github.com/mkirchstein/angular-scrollto",
   "authors": [
     "Scott Corgan <scottcorgan@gmail.com>",
-    "Matt Kirchstein <mkirchstein@gmail.com>"
+    "Matt Kirchstein <mkirchstein@gmail.com>",
+    "Dieter Geerts <dieter@dworks.be>"
   ],
   "description": "Angular directive to scroll to element by selector",
   "main": "angular-scrollto.js",
